[tool.poetry]
name = "proj-test"
version = "0.1.0"
description = ""
authors = ["Natalia Stroganova <ntstroganova@gmail.com>"]
readme = "README.md"
packages = [{include = "proj_test"}]

[tool.poetry.dependencies]
python = "^3.11"
attrs = "22.2.0"
colorama = "0.4.6"
coverage = "7.0.5"
iniconfig = "2.0.0"
packaging = "23.0"
pluggy = "1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
